[0.0.7+SVN]
* Fixed typos. <wrzasq>

[0.0.6]
* Updated for last database changes. <wrzasq>
* Increased PHP 5.0 compatibility. <wrzasq>
* Added generic binary formats reader with cache drivers. <wrzasq>
* Added OTBM files basic support. <wrzasq>
* Added monsters support. <wrzasq>
* Added OTS_Player::getVocationName() method. <wrzasq>

[0.0.5]
* Added support for vocations.xml file. <wrzasq>
* Added support for bans. <wrzasq>
* Added sorting and filtering for lists. <wrzasq>
* Code grouped into base classes. <wrzasq>
* Some code optimalisation. <wrzasq>
* Fixed typos. <wrzasq>

[0.0.4]
* Added guild system support (guilds, ranks, invitations and requests drivers mechanisms). <wrzasq>
* Added account group support. <wrzasq>
* Added support for depot_id field (it is reserverd in OTServ for futher use). <wrzasq>
* Added PostgreSQL and ODBC drivers. <wrzasq>
* Added __sleep() and __wakeup() methods to allow POT objects to be stored in sessions. <wrzasq>
* Added __clone() methods to allow save ID-losing cloning of POT objects. <wrzasq>
* Added __set_state() methods. <wrzasq>
* Updated players table structure. <wrzasq>
* Dropped REGEXP operator bindings - not used anywhere. <wrzasq>
* Fixed items loading and saving. <wrzasq>
* Fixed typos. <wrzasq>

[0.0.3]
* Added custom fields support. <wrzasq>
* Added items and depots support. <wrzasq>
* Added support for players PACC timestamps. <wrzasq>
* Fixed loading skills. <wrzasq>
* Replaced E_USER_* with exceptions. <wrzasq>
* Uses fetchAll() in loops to prevent MySQL buffering problems. <wrzasq>
* Restricted access to POT class constructor to make sure it won't be instanced directly. <wrzasq>

[0.0.2]
* Added "compat" library for POT. <wrzasq>
* Added skills support in OTS_Player class. <wrzasq>
* Added 'info' serverStatus() method and respond handler for server status protocol. <wrzasq>
* Fixed `redskulltime` field name in OTS_Player. <wrzasq>
* Fixed 'password' parameter for DB_MYSQL driver. <wrzasq>