@@ -15,6 +15,7 @@
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
  * @todo 0.0.7: Spells.
  * @todo 0.0.8: Items list (items.xml + items.otb -> cache).
+ * @todo 0.0.9: Houses support.
  * @todo 0.1.0: Get rid of POT::getInstance()->create*() calls - use POT::getInstance()->getDBHandle() in constructors.
  * @todo 0.1.0: Implement __get()/__set()/__call()/__toString(); ArrayAccess interface.
  * @todo 1.0.0: Complete phpUnit test.
