@@ -7,7 +7,7 @@
 
 /**
  * @package POT
- * @version 0.0.5
+ * @version 0.0.7+SVN
  * @author Wrzasq <wrzasq@gmail.com>
  * @copyright 2007 (C) by Wrzasq
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
@@ -17,17 +17,17 @@
  * OTServ character abstraction.
  * 
  * @package POT
- * @version 0.0.5
+ * @version 0.0.7+SVN
  */
 class OTS_Player extends OTS_Base_DAO
 {
 /**
  * Player data.
  * 
- * @version 0.0.5
+ * @version 0.0.7+SVN
  * @var array
  */
-    private $data = array('premend' => 0, 'sex' => POT::SEX_FEMALE, 'vocation' => 0, 'experience' => 0, 'level' => 1, 'maglevel' => 0, 'health' => 100, 'healthmax' => 100, 'mana' => 100, 'manamax' => 100, 'manaspent' => 0, 'soul' => 0, 'direction' => POT::DIRECTION_NORTH, 'lookbody' => 10, 'lookfeet' => 10, 'lookhead' => 10, 'looklegs' => 10, 'looktype' => 136, 'lookaddons' => 0, 'posx' => 0, 'posy' => 0, 'posz' => 0, 'cap' => 0, 'lastlogin' => 0, 'lastip' => 0, 'save' => 1, 'redskulltime' => 0, 'redskull' => false, 'guildnick' => '', 'loss_experience' => 10, 'loss_mana' => 10, 'loss_skills' => 10);
+    private $data = array('premend' => 0, 'sex' => POT::SEX_FEMALE, 'vocation' => 0, 'experience' => 0, 'level' => 1, 'maglevel' => 0, 'health' => 100, 'healthmax' => 100, 'mana' => 100, 'manamax' => 100, 'manaspent' => 0, 'soul' => 0, 'direction' => POT::DIRECTION_NORTH, 'lookbody' => 10, 'lookfeet' => 10, 'lookhead' => 10, 'looklegs' => 10, 'looktype' => 136, 'lookaddons' => 0, 'posx' => 0, 'posy' => 0, 'posz' => 0, 'cap' => 0, 'lastlogin' => 0, 'lastip' => 0, 'save' => true, 'redskulltime' => 0, 'redskull' => false, 'guildnick' => '', 'loss_experience' => 10, 'loss_mana' => 10, 'loss_skills' => 10);
 
 /**
  * Player skills.
@@ -915,10 +915,9 @@ class OTS_Player extends OTS_Base_DAO
 /**
  * Checks if save flag is set.
  * 
- * @version 0.0.3
+ * @version 0.0.7+SVN
  * @return bool PACC days.
  * @throws E_OTS_NotLoaded If player is not loaded.
- * @deprecated 0.0.6 In database save field is now integer.
  */
     public function isSaveSet()
     {
@@ -927,27 +926,27 @@ class OTS_Player extends OTS_Base_DAO
             throw new E_OTS_NotLoaded();
         }
 
-        return $this->data['save'] != 0;
+        return $this->data['save'];
     }
 
 /**
  * Unsets save flag.
  * 
- * @version 0.0.6
- * @deprecated 0.0.6 In database save field is now integer.
+ * @version 0.0.7+SVN
  */
     public function unsetSave()
     {
-        $this->data['save'] = 0;
+        $this->data['save'] = false;
     }
 
 /**
  * Save counter.
  * 
- * @version 0.0.6
+ * @version 0.0.7+SVN
  * @since 0.0.6
  * @return int Save counter.
  * @throws E_OTS_NotLoaded If player is not loaded.
+ * @deprecated 0.0.7+SVN Save field is back as flag not a counter.
  */
     public function getSave()
     {
@@ -960,14 +959,14 @@ class OTS_Player extends OTS_Base_DAO
     }
 
 /**
- * Sets save counter.
+ * Sets save flag.
  * 
- * @version 0.0.6
- * @param int $save Save counter (this parameter is optional for backward compatibility when save was just a flag).
+ * @version 0.0.7+SVN
+ * @param int $save Deprecated, unused, optional.
  */
     public function setSave($save = 1)
     {
-        $this->data['save'] = (int) $save;
+        $this->data['save'] = true;
     }
 
 /**
